
Changes with mod_fastcgi 2.2

 *) Use Apache's NET_SIZE_T to get the correct arg type for getsockopt().

 *) Deleted redundant header files from fcgi.h.

 *) Full path names are no longer required for directives which take
    file names as arguments.  Like other Apache directives you can
    specify paths from server_root (don't start with a "/").

 *) The fcgiKillMgr is gone.  This intermediate process sat between
    the Apache parent and the FastCGI Process Manager under Apache
    1.2.	 The process manager tries to name itself fcgi_pm (it used
    to be fcgiProcMgr).

 *) Authentication, Authorization, and Access phases are now
    supported. I've bent the FastCgi spec a bit: as many of the standard
    environment variables (that were easy) are sent (the spec says don't
    send some by name), all headers (except Status) sent by the auth
    FastCgi server are passed to subprocesses (CGI/FastCGI invocations)
    as environment variables rather than just those prefixed by
    "Variable-".  Custom responses for auth failures aren't supported
    (yet.. we'll see what the demand for this is like).  In addition to
    the FastCGI protocol defined environment variable "FCGI_ROLE" being
    set to "AUTHORIZER" an environment variable "FCGI_APACHE_ROLE" is
    set indicating which of the three phases is being processed.  See
    the docs for info on the new per-directory directives:

        FastCgiAuthenticator, FastCgiAuthenticatorAuthoritative,
        FastCgiAuthorizer, FastCgiAuthorizerAuthoritative,
        FastCgiAccessChecker, FastCgiAccessCheckerAuthoritative

 *) The code has been broken into logical chunks making figuring it
    out much easier.  All of the #defines a user may want to change are
    now in mod_fastcgi.h.

 *) All the logging has been converted to the "supported" Apache
    logging routines, ap_log_error() and ap_log_rerror().  Log entries
    for request specific errors should now be directed to the correct